[package]
name            = "fwto"
version         = "0.5.1"
authors         = ["Karl Yi28 Liu <liuyi28@lenovo.com>"]
edition         = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt       = "0.3"
path-slash      = "0.x"
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"